@@ -1,7 +1,6 @@
 package com.ighost.demo.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -15,27 +14,22 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class FunctionService {
 
-	private final FunctionRepository functionRepository;
+    private final FunctionRepository functionRepository;
 
-	public List<FunctionDto> searchFunctions(String keyword) {
-		List<Function> functions = functionRepository.findByNameContainingOrCodeContaining(keyword, keyword);
-		return functions.stream().map(this::convertToDto).collect(Collectors.toList());
-	}
+    public List<FunctionDto> searchFunctions(String keyword) {
+        List<Function> functions = functionRepository.findByNameContainingOrCodeContaining(keyword, keyword);
+        return functions.stream().map(this::convertToDto).toList();
+    }
 
-	/**
-	 * 查詢系統中所有的功能 * @return 所有功能的列表
-	 */
-	public List<FunctionDto> findAllFunctions() {
-		List<Function> functions = functionRepository.findAll();
-		return functions.stream().map(this::convertToDto).collect(Collectors.toList());
-	}
+    public List<FunctionDto> findAllFunctions() {
+        return functionRepository.findAll().stream()
+                .map(this::convertToDto)
+                .toList();
+    }
 
-	/**
-	 * 將 Function 實體轉換為 FunctionDto Record。
-	 */
-	private FunctionDto convertToDto(Function f) {
-		Integer groupId = (f.getGroup() != null) ? f.getGroup().getId() : null;
-		String groupName = (f.getGroup() != null) ? f.getGroup().getName() : null;
-		return new FunctionDto(f.getId(), f.getCode(), f.getName(), f.getUrl(), groupId, groupName);
-	}
+    private FunctionDto convertToDto(Function function) {
+        Integer groupId = function.getGroup() != null ? function.getGroup().getId() : null;
+        String groupName = function.getGroup() != null ? function.getGroup().getName() : null;
+        return new FunctionDto(function.getId(), function.getCode(), function.getName(), function.getUrl(), groupId, groupName);
+    }
 }
