@@ -1,8 +1,7 @@
 package com.ighost.demo.service;
 
-import java.util.Collections;
+import java.util.List;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,22 +11,22 @@ import org.springframework.stereotype.Service;
 import com.ighost.demo.entity.UserInfo;
 import com.ighost.demo.repo.UserRepository;
 
+import lombok.RequiredArgsConstructor;
+
 @Service
+@RequiredArgsConstructor
 public class UserDetailsServiceImpl implements UserDetailsService {
 
-    @Autowired
-    private UserRepository userRepository;
+    private final UserRepository userRepository;
 
     @Override
-    public UserDetails loadUserByUsername(String username)
-            throws UsernameNotFoundException {
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         UserInfo user = userRepository.findByUsername(username)
-            .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
         return new User(
-            user.getUsername(),
-            user.getPassword(),
-            Collections.singletonList(() -> "ROLE_USER")
-        );
+                user.getUsername(),
+                user.getPassword(),
+                List.of(() -> "ROLE_USER"));
     }
 }
